trunk/src/phdl/grammar/PhdloldParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g 2012-01-06 22:48:25

/*
    Copyright (C) 2011  Brigham Young University

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, version 3.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */


	package phdl.grammar;
	import java.util.TreeSet;
	import java.util.Set;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

/**
 * A grammar to lex and parse a PHDL source file.
 * 
 * @author Richard Black and Brad Riching
 * @version 0.1
 */
public class PhdloldParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENT", "LEFTBRACE", "RIGHTBRACE", "SEMICOLON", "EQUALS", "STRING", "COMMA", "LEFTPAREN", "RIGHTPAREN", "PERIOD", "AMPERSAND", "LEFTANGLE", "RIGHTANGLE", "INTEGER", "LEFTBRACKET", "COLON", "RIGHTBRACKET", "CHAR", "DIGIT", "WHITESPACE", "LINE_COMMENT", "MULTILINE_COMMENT", "INCLUDE", "'design'", "'port'", "'device'", "'attr'", "'pin'", "'net'", "'inst'", "'of'", "'sub'", "'combine'", "'newattr'", "'this'", "'info'", "'group'", "'open'"
    };
    public static final int EOF=-1;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int IDENT=4;
    public static final int LEFTBRACE=5;
    public static final int RIGHTBRACE=6;
    public static final int SEMICOLON=7;
    public static final int EQUALS=8;
    public static final int STRING=9;
    public static final int COMMA=10;
    public static final int LEFTPAREN=11;
    public static final int RIGHTPAREN=12;
    public static final int PERIOD=13;
    public static final int AMPERSAND=14;
    public static final int LEFTANGLE=15;
    public static final int RIGHTANGLE=16;
    public static final int INTEGER=17;
    public static final int LEFTBRACKET=18;
    public static final int COLON=19;
    public static final int RIGHTBRACKET=20;
    public static final int CHAR=21;
    public static final int DIGIT=22;
    public static final int WHITESPACE=23;
    public static final int LINE_COMMENT=24;
    public static final int MULTILINE_COMMENT=25;
    public static final int INCLUDE=26;

    // delegates
    // delegators


        public PhdloldParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PhdloldParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return PhdloldParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g"; }



    	/**
    	 * The list of errors retrived after parsing to report
    	 */
    	private List<String> errors = new ArrayList<String>();

    	/**
    	 * Overriding this method allows the parser to bail out on the first unexpected token.  The unexpected token
    	 * is reported in the usual format.
    	 */
    	@Override
    	public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
    		String hdr = getErrorHeader(e);
    		String msg = getErrorMessage(e, tokenNames);
    		errors.add(hdr + " unexpected token: " + e.token.getText());
    	}

    	/**
    	 * Accessor method for retrieving the accumulated errors if they exist.
    	 */
    	public List<String> getErrors() {
    		return errors;
    	}


    public static class sourceText_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sourceText"
    // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:157:1: sourceText : ( designDecl )+ EOF ;
    public final PhdloldParser.sourceText_return sourceText() throws RecognitionException {
        PhdloldParser.sourceText_return retval = new PhdloldParser.sourceText_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EOF2=null;
        PhdloldParser.designDecl_return designDecl1 = null;


        CommonTree EOF2_tree=null;

        try {
            // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:162:2: ( ( designDecl )+ EOF )
            // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:162:4: ( designDecl )+ EOF
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:162:4: ( designDecl )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==27) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:162:4: designDecl
            	    {
            	    pushFollow(FOLLOW_designDecl_in_sourceText79);
            	    designDecl1=designDecl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, designDecl1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_sourceText82); 
            EOF2_tree = (CommonTree)adaptor.create(EOF2);
            adaptor.addChild(root_0, EOF2_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "sourceText"

    public static class designDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "designDecl"
    // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:165:1: designDecl : 'design' IDENT LEFTBRACE ( deviceDecl | netDecl | infoStruct | instanceDecl | netAssignment | groupStruct | subDesignInstance | portDecl )* RIGHTBRACE ;
    public final PhdloldParser.designDecl_return designDecl() throws RecognitionException {
        PhdloldParser.designDecl_return retval = new PhdloldParser.designDecl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal3=null;
        Token IDENT4=null;
        Token LEFTBRACE5=null;
        Token RIGHTBRACE14=null;
        PhdloldParser.deviceDecl_return deviceDecl6 = null;

        PhdloldParser.netDecl_return netDecl7 = null;

        PhdloldParser.infoStruct_return infoStruct8 = null;

        PhdloldParser.instanceDecl_return instanceDecl9 = null;

        PhdloldParser.netAssignment_return netAssignment10 = null;

        PhdloldParser.groupStruct_return groupStruct11 = null;

        PhdloldParser.subDesignInstance_return subDesignInstance12 = null;

        PhdloldParser.portDecl_return portDecl13 = null;


        CommonTree string_literal3_tree=null;
        CommonTree IDENT4_tree=null;
        CommonTree LEFTBRACE5_tree=null;
        CommonTree RIGHTBRACE14_tree=null;

        try {
            // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:173:2: ( 'design' IDENT LEFTBRACE ( deviceDecl | netDecl | infoStruct | instanceDecl | netAssignment | groupStruct | subDesignInstance | portDecl )* RIGHTBRACE )
            // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:173:4: 'design' IDENT LEFTBRACE ( deviceDecl | netDecl | infoStruct | instanceDecl | netAssignment | groupStruct | subDesignInstance | portDecl )* RIGHTBRACE
            {
            root_0 = (CommonTree)adaptor.nil();

            string_literal3=(Token)match(input,27,FOLLOW_27_in_designDecl95); 
            string_literal3_tree = (CommonTree)adaptor.create(string_literal3);
            root_0 = (CommonTree)adaptor.becomeRoot(string_literal3_tree, root_0);

            IDENT4=(Token)match(input,IDENT,FOLLOW_IDENT_in_designDecl98); 
            IDENT4_tree = (CommonTree)adaptor.create(IDENT4);
            adaptor.addChild(root_0, IDENT4_tree);

            LEFTBRACE5=(Token)match(input,LEFTBRACE,FOLLOW_LEFTBRACE_in_designDecl100); 
            // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:174:3: ( deviceDecl | netDecl | infoStruct | instanceDecl | netAssignment | groupStruct | subDesignInstance | portDecl )*
            loop2:
            do {
                int alt2=9;
                switch ( input.LA(1) ) {
                case 29:
                    {
                    alt2=1;
                    }
                    break;
                case 32:
                    {
                    alt2=2;
                    }
                    break;
                case 39:
                    {
                    alt2=3;
                    }
                    break;
                case 33:
                    {
                    alt2=4;
                    }
                    break;
                case IDENT:
                    {
                    alt2=5;
                    }
                    break;
                case 40:
                    {
                    alt2=6;
                    }
                    break;
                case 35:
                    {
                    alt2=7;
                    }
                    break;
                case 28:
                    {
                    alt2=8;
                    }
                    break;

                }

                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:174:4: deviceDecl
            	    {
            	    pushFollow(FOLLOW_deviceDecl_in_designDecl107);
            	    deviceDecl6=deviceDecl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, deviceDecl6.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:174:17: netDecl
            	    {
            	    pushFollow(FOLLOW_netDecl_in_designDecl111);
            	    netDecl7=netDecl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, netDecl7.getTree());

            	    }
            	    break;
            	case 3 :
            	    // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:174:27: infoStruct
            	    {
            	    pushFollow(FOLLOW_infoStruct_in_designDecl115);
            	    infoStruct8=infoStruct();

            	    state._fsp--;

            	    adaptor.addChild(root_0, infoStruct8.getTree());

            	    }
            	    break;
            	case 4 :
            	    // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:174:40: instanceDecl
            	    {
            	    pushFollow(FOLLOW_instanceDecl_in_designDecl119);
            	    instanceDecl9=instanceDecl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, instanceDecl9.getTree());

            	    }
            	    break;
            	case 5 :
            	    // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:174:55: netAssignment
            	    {
            	    pushFollow(FOLLOW_netAssignment_in_designDecl123);
            	    netAssignment10=netAssignment();

            	    state._fsp--;

            	    adaptor.addChild(root_0, netAssignment10.getTree());

            	    }
            	    break;
            	case 6 :
            	    // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:174:71: groupStruct
            	    {
            	    pushFollow(FOLLOW_groupStruct_in_designDecl127);
            	    groupStruct11=groupStruct();

            	    state._fsp--;

            	    adaptor.addChild(root_0, groupStruct11.getTree());

            	    }
            	    break;
            	case 7 :
            	    // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:174:85: subDesignInstance
            	    {
            	    pushFollow(FOLLOW_subDesignInstance_in_designDecl131);
            	    subDesignInstance12=subDesignInstance();

            	    state._fsp--;

            	    adaptor.addChild(root_0, subDesignInstance12.getTree());

            	    }
            	    break;
            	case 8 :
            	    // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:174:105: portDecl
            	    {
            	    pushFollow(FOLLOW_portDecl_in_designDecl135);
            	    portDecl13=portDecl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, portDecl13.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            RIGHTBRACE14=(Token)match(input,RIGHTBRACE,FOLLOW_RIGHTBRACE_in_designDecl141); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "designDecl"

    public static class portDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "portDecl"
    // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:178:1: portDecl : 'port' ( sliceDecl )? IDENT ( ',' IDENT )* SEMICOLON ;
    public final PhdloldParser.portDecl_return portDecl() throws RecognitionException {
        PhdloldParser.portDecl_return retval = new PhdloldParser.portDecl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal15=null;
        Token IDENT17=null;
        Token char_literal18=null;
        Token IDENT19=null;
        Token SEMICOLON20=null;
        PhdloldParser.sliceDecl_return sliceDecl16 = null;


        CommonTree string_literal15_tree=null;
        CommonTree IDENT17_tree=null;
        CommonTree char_literal18_tree=null;
        CommonTree IDENT19_tree=null;
        CommonTree SEMICOLON20_tree=null;

        try {
            // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:179:2: ( 'port' ( sliceDecl )? IDENT ( ',' IDENT )* SEMICOLON )
            // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:180:3: 'port' ( sliceDecl )? IDENT ( ',' IDENT )* SEMICOLON
            {
            root_0 = (CommonTree)adaptor.nil();

            string_literal15=(Token)match(input,28,FOLLOW_28_in_portDecl155); 
            string_literal15_tree = (CommonTree)adaptor.create(string_literal15);
            adaptor.addChild(root_0, string_literal15_tree);

            // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:180:10: ( sliceDecl )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==LEFTBRACKET) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:180:10: sliceDecl
                    {
                    pushFollow(FOLLOW_sliceDecl_in_portDecl157);
                    sliceDecl16=sliceDecl();

                    state._fsp--;

                    adaptor.addChild(root_0, sliceDecl16.getTree());

                    }
                    break;

            }

            IDENT17=(Token)match(input,IDENT,FOLLOW_IDENT_in_portDecl160); 
            IDENT17_tree = (CommonTree)adaptor.create(IDENT17);
            adaptor.addChild(root_0, IDENT17_tree);

            // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:180:27: ( ',' IDENT )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==COMMA) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // C:\\Users\\brad\\eclipse\\phdl\\src\\phdl\\grammar\\Phdlold.g:180:28: ',' IDENT
            	    {
            	    char_literal18=(Token)match(input,COMMA,FOLLOW_COMMA_in_portDecl163); 
            	    char_literal18_tree = (CommonTree)adaptor.create(char_literal18);
            	    adaptor.addChild(root_0, char_literal18_tree);

            	    IDENT19=(Token)match(input,IDENT,FOLLOW_IDENT_in_portDecl165); 
            	    IDENT19_tree = (CommonTree)adaptor.create(IDENT19);
